 - **backwards-incompatible**: The kwarg name for Any and Choice elements are
   renamed to generic ``_value_N`` names.
 - Auto-load the http://schemas.xmlsoap.org/soap/encoding/ schema if it is
   referenced but not imported. Too many XSD's assume that the schema is always
   available.
 - Major refactoring of the XSD handling to correctly support nested 
   xsd:sequence elements. 

0.10.0 (2016-06-22)
-------------------
 - Make global elements / types truly global by refactoring the Schema 
   parsing. Previously the lookups where non-transitive, but this should only
   be the case during parsing of the xml schema.
 - Properly unwrap XML responses in soap.DocumentMessage when a choice is the
   root element. (#80)
 - Update exceptions structure, all zeep exceptions are now using 
   zeep.exceptions.Error() as base class.


0.9.1 (2016-06-17)
------------------
 - Quote the SOAPAction header value (Derek Harland)
 - Undo fallback for SOAPAction if it is empty (#83)
 

0.9.0 (2016-06-14)
------------------
 - Use the appdirs module to retrieve the OS cache path. Note that this results
   in an other default cache path then previous releases! See 
   https://github.com/ActiveState/appdirs for more information.
 - Fix regression when initializing soap objects with invalid kwargs.
 - Update wsse.UsernameToken to set encoding type on nonce (Antonio Cuni)
 - Remove assert statement in soap error handling (Eric Waller)
 - Add '--no-verify' to the command line interface. (#63)
 - Correctly xsi:type attributes on unbounded elements. (nicholjy) (#68)
 - Re-implement xsd:list handling
 - Refactor logic to open files from filesystem.
 - Refactor the xsd:choice implementation (serializing/deserializing)
 - Implement parsing of xsd:any elements.


0.8.1 (2016-06-08)
------------------
 - Use the operation name for the xml element which wraps the parameters in 
   for soap RPC messages (#60)


0.8.0 (2016-06-07)
------------------