@@ -50,3 +50,37 @@ Changing the SqliteCache settings can be done via::
     ...     'http://www.webservicex.net/ConvertSpeed.asmx?WSDL',
     ...     transport=transport)
 
+
+
+Debugging
+---------
+To see the SOAP XML messages which are sent to the remote server and the 
+response received you need to set the Python logger level to DEBUG for the
+``zeep.transports`` module.
+
+.. code-block:: python
+
+    import logging.config
+
+    logging.config.dictConfig({
+        'version': 1,
+        'formatters': {
+            'verbose': {
+                'format': '%(name)s: %(message)s'
+            }
+        },
+        'handlers': {
+            'console': {
+                'level': 'DEBUG',
+                'class': 'logging.StreamHandler',
+                'formatter': 'verbose',
+            },
+        },
+        'loggers': {
+            'zeep.transports': {
+                'level': 'DEBUG',
+                'propagate': True,
+                'handlers': ['console'],
+            },
+        }
+    })
